--- a/package.json
+++ b/package.json
@@ -54,7 +54,9 @@
     "react-final-form": "^6.4.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
-    "styled-components": "^5.1.0"
+    "styled-components": "^5.1.0",
+    "tone": "^13.8.25",
+    "vexflow": "^1.2.93"
   },
   "devDependencies": {
     "@habx/eslint-config-client": "^3.1.0",
@@ -66,6 +68,7 @@
     "@types/react-router-dom": "^5.1.4",
     "@types/segment-analytics": "0.0.32",
     "@types/styled-components": "^5.0.1",
+    "@types/vexflow": "^1.2.33",
     "bundlewatch": "^0.2.6",
     "circular-dependency-plugin": "^5.2.0",
     "cross-env": "^7.0.2",
