--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,26 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "habx match",
+  "name": "habx match",
   "icons": [
     {
-      "src": "favicon.gif",
+      "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
+    },
+    {
+      "src": "logoSmall.png",
+      "type": "image/png",
+      "sizes": "192x192"
+    },
+    {
+      "src": "logoBig.png",
+      "type": "image/png",
+      "sizes": "512x512"
     }
   ],
-  "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#061A3C",
+  "start_url": "./",
+  "scope": ".",
   "background_color": "#ffffff"
 }
