--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "habx match",
-  "name": "habx match",
+  "short_name": "Sheet teacher",
+  "name": "Sheet teacher",
   "icons": [
     {
       "src": "favicon.ico",
